gitops-pull-sample/6-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-service
  namespace: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - port: 80
      targetPort: 8080
